summative.moria.Moria.scala.error
Compilation error:
Moria:26: error: illegal start of statement (no modifiers allowed here)
override def run() {
^